fixed banner overflow

--- a/playexceed/stylemain.css
+++ b/playexceed/stylemain.css
@@ -27,7 +27,6 @@
     padding: 20px;
     text-align: center;
     background: antiquewhite;
-    width: 100%;
 }
 
 .box {
